--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -72,7 +72,7 @@
 <p><a href="mailto:larissa.collins@stanford.edu">larissa.collins@stanford.edu</a></p>
           <br>
   	  <a class="header-link" href="/about_jgc/team_bios/abby.html">Abby Do</a>
-	  <p>Project Facilitator</p>
+	  <p>Research Assistant</p>
 (650) 721-2971<br>	  
 <p><a href="mailto:abbydo@stanford.edu">abbydo@stanford.edu</a></p>
           <br>
