--- a/our_work/content-capacity_building.html
+++ b/our_work/content-capacity_building.html
@@ -71,7 +71,7 @@ The Gardner Center works with partners to develop and expand their skills and kn
 <br>
 <p>
  The Gardner Center is proud to foster opportunities for youth and young adults to participate in the fields of 
-        youth development and community-based research. This year we are partnering with the Shinnyo-En Foundation, the Haas Center for Public Service, and Public Allies to host two post-undergraduate fellows,<a href="/about_jgc/fellows.html">Sophia Colombari Figueroa and Cody Young</a>, to collaborate with youth-serving organizations in our near neighbor communities of East Palo Alto and Redwood City, respectively.
+        youth development and community-based research. This year we are partnering with the Shinnyo-En Foundation, the Haas Center for Public Service, and Public Allies to host two post-undergraduate fellows,<a href="/about_jgc/fellows.html">Sophia Colombari Figueroa and Cody Young</a>, to collaborate with youth-serving organizations in our near neighbor communities of Redwood City and East Palo Alto, respectively.
          </div>
 
 
