--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
        <p id="u1047-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/news/news.html" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="http://events.stanford.edu/events/469/46979/" target="_blank">SCOPE Brown Bag Seminar:<br>Dr. Pedro Noguera<br>Schooling for Resilience</a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="http://events.stanford.edu/events/469/46979/" target="_blank">The 39th Annual Meeting of<br>the Association for the Study of Higher Education:<br>Weaving Scholarship & Policy Making</a></p>
        <p>&nbsp;</p>
-       <p>DATE: Monday, November 10&nbsp;</p>
-       <p>LOCATION: Stanford University</p>
+       <p>DATE: November 21 & 22&nbsp;</p>
+       <p>LOCATION: Washington, D.C.</p>
 	
        <p id="u1182-9">&nbsp;</p>
       </div>
