--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -57,7 +57,7 @@
 <p><a href="mailto:borenstein@cs.stanford.edu">borenstein@cs.stanford.edu</a></p>
           <br>
 	  <a class="header-link" href="/about_jgc/team_bios/graciela.html">Graciela Borsato</a>
-	  <p>Social Science Research Associate</p>
+	  <p>Senior Research Associate</p>
 (650) 724-4673<br>	  
 <p><a href="mailto:gborsato@stanford.edu">gborsato@stanford.edu</a></p>
           <br>
