--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
        <p id="u1047-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/news/news.html" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="http://events.stanford.edu/events/469/46979/" target="_blank">The 39th Annual Meeting of<br>the Association for the Study of Higher Education:<br>Weaving Scholarship & Policy Making</a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="https://edpolicy.stanford.edu/events/1265" target="_blank">Jonathan Jansen: How the Poorest Schools in South Africa<br>Achieve the Highest Results <br> in Science & Math</a></p>
        <p>&nbsp;</p>
-       <p>DATE: November 21 & 22&nbsp;</p>
-       <p>LOCATION: Washington, D.C.</p>
+       <p>DATE: January 21, 2015&nbsp;</p>
+       <p>LOCATION: Stanford</p>
 	
        <p id="u1182-9">&nbsp;</p>
       </div>
