--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         <p id="u1039-3"><a class="nonblock" href="http://jgc.stanford.edu/about_jgc/mission.html" target="_blank"><span id="u1039">Gardner Perspectives</span></a></p>
        </div>
        <div class="clearfix colelem" id="u1040-16"><!-- content -->
-        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="/resources/publications/GardnerPerspectiveOctober2014.pdf" target="_blank">THE YOUNG LEADERS OF NOW</a></p>
+        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="/resources/publications/GardnerPerspectiveDecember2014.pdf" target="_blank">ARE BROAD ACCESS INSTITUTIONS PREPARING STUDENTS FOR CALIFORNIA'S LABOR MARKET?</a></p>
         <p id="u1040-7">&nbsp;</p>
-        <p id="u1040-9">Mary Hofstedt</p>
+        <p id="u1040-9">Manuelito Biag</p>
         <p id="u1040-11"></p>
-        <p><br/>Like John W. Gardner, we believe that when the assets of our young people are under-valued and under-tapped, it comes at a tremendous cost to society. Working with youth as full partners in change efforts recognizes youth as the leaders of today, prepares them as leaders of tomorrow, and enriches our communities along the way.</p>
+        <p><br/>Most of today's college-goers are pursuing their education at regional broad-access institutions that accept a majority of students who apply, including two-year community colleges, less-selective four-year public colleges, and proprietary schools. Understanding the role these institutions play in preparing students for California's labor market is critical, and the subject of a study underway at the Gardner Center.</p>
        </div>
       </div>
      </div>
@@ -232,8 +232,10 @@
      </div>
      <div class="clearfix grpelem" id="u8392-10"><!-- content -->
       <p id="u8392-2"><span id="u8392">NEWS</span></p>
-    <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="http://www.edpolicyinca.org/blog/what-summer-job-worth-impact-summer-youth-employment-academic-outcomes"><span id="u8392-3">What is a Summer Job Worth?</span></a></p>
-    <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="/images/team/Jake.jpg" alt="" width="100" height="126"/></span></span></span>Recent work by Gardner Center Associate Director Jacob Leos-Urbel provides new evidence regarding the impact of large-scale summer youth employment programs on high school students’ school attendance and academic achievement. His paper estimates the impact of New York City's Summer Youth Employment Program (SYEP) on school attendance and other educational outcomes in the following school year for a large sample of low-income high school students. SYEP provides summer jobs and training to youth aged 14 to 21.</a></p>
+    <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="https://ed.stanford.edu/news/experts-schools-cant-address-discipline-disparities-without-confronting-racial-issues"><span id="u8392-3">Race & Discipline Disparities</span></a></p>
+    <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="/images/team/prud.jpg" alt="" width="100" height="126"/></span></span></span>Students of color are being disciplined in school in far greater numbers than their white peers, often for the same type of misbehavior. A new paper by Prudence Carter and colleagues on the Discipline Disparities Research to-Practice Collaborative argues that eliminating discipline disparities can’t be achieved without acknowledging and addressing common issues of race that shape adult-student interactions in schools.
+
+ </a></p>
      </div>
      <div class="clip_frame grpelem" id="u9534" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="21" data-mu-ie-matrix-dy="-21"><!-- image -->
       <img class="block" id="u9534_img" src="images/red-circle.png" alt="" width="113" height="70"/>
