--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -6,8 +6,7 @@
         <h1 class="title-page-header-big">Jobs, Internships, and Volunteer Opportunities</h1>
 
 <br>
-<br>
-<a class="header-link" href="https://stanfordcareers.stanford.edu/job-search?jobId=63994">Senior Community Engagement Associate</a>
+There are no open positions at this time. 
 
 
          </div>
