--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
        <p id="u1047-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/news/news.html" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="https://ed.stanford.edu/events/scope-brown-bag-seminar-13" target="_blank">Lee Shulman: Serendipity in Policy Education:<br>Opportunity is Not Enough<br> </a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="https://edpolicy.stanford.edu/events/1270" target="_blank">Technology as a Catalyst for Interest-Driven Learning:<br>Designing for Equity<br> </a></p>
        <p>&nbsp;</p>
-       <p>DATE: February 23, 2015&nbsp;</p>
+       <p>DATE: April 13, 2015&nbsp;</p>
        <p>LOCATION: Stanford</p>
 	
        <p id="u1182-9">&nbsp;</p>
