changes for week and additions of Liz and perspectives

--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -6,7 +6,13 @@
         <h1 class="title-page-header-big">Jobs, Internships, and Volunteer Opportunities</h1>
 
 <br>
-There are no open positions at this time. 
+We are currently accepting applications for the following positions:
+<br>
+<br>
+<a href="https://stanford.taleo.net/careersection/jobdetail.ftl?job=65948&lang=en">Policy Analyst: Mixed Methods</a>
+<br>
+<br>
+<a href="https://stanford.taleo.net/careersection/jobdetail.ftl?job=65949&lang=en">Policy Analyst: Quantitative </a>
 
 
          </div>
