--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -117,6 +117,13 @@
 (650) 736-6076<br>
 	  <p><a href="mailto:fkmiller@stanford.edu">fkmiller@stanford.edu</a></p>
           <br>
+ </div>
+   	    <div class="column-inner-box">
+<a class="header-link" href="/about_jgc/team_bios/liz.html">Liz Newman</a>
+	  <p>Senior Community Engagement Associate</p>
+(650) 723-3364
+	  <p><a href="mailto:enewman@stanford.edu">enewman@stanford.edu</a></p>
+          <br>
 
 	 </div>
    	    <div class="column-inner-box">
