adding image and updates

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div id="u1023"><!-- simple frame --></div>
       <div class="clearfix" id="pu1039-5"><!-- column -->
        <div class="Perspectives-Headline-Link clearfix colelem" id="u1039-5"><!-- content -->
-        <p id="u1039-3"><a class="nonblock" href="http://jgc.stanford.edu/about_jgc/mission.html" target="_blank"><span id="u1039">Gardner Perspectives</span></a></p>
+        <p id="u1039-3"><a class="nonblock" href="/resources/publications/GardnerPerspectiveMarch2015.pdf" target="_blank"><span id="u1039">Gardner Perspectives</span></a></p>
        </div>
        <div class="clearfix colelem" id="u1040-16"><!-- content -->
         <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="/resources/publications/GardnerPerspectiveMarch2015.pdf" target="_blank">BUILDING DATA ATTITUDE <br>AND DATA CAPACITY</a></p>
@@ -181,7 +181,7 @@
       </ul>
      </div>
      <div class="shadow clip_frame grpelem" id="u7712"><!-- image -->
-      <img class="block" id="u7712_img" src="images/cris lock up.png" alt="" width="81" height="122"/>
+      <img class="block" id="u7712_img" src="images/WhatCounts.jpg" alt="" width="81" height="122"/>
      </div>
      <div class="grpelem" id="u1020"><!-- simple frame --></div>
      <div class="grpelem" id="u1021"><!-- simple frame --></div>
@@ -197,11 +197,11 @@
       <p>The John W. Gardner Center partners with communities to develop leadership, conduct research, and effect change to improve the lives of youth.</p>
      </div>
      <div class="Publications-Headline-Link clearfix grpelem" id="u1037-5"><!-- content -->
-      <p><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/CRISResources.html"><span id="u1037">Publications</span></a></p>
+      <p><a class="nonblock" href="http://www.whatcountsforamerica.org/book/what-counts/"><span id="u1037">Publications</span></a></p>
      </div>
      <div class="clearfix grpelem" id="u1181-9"><!-- content -->
-      <p class="Publications-Subhead-Link" id="u1181-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/CRISResources.html">CRIS Resource Series</a></p>
-      <p id="u1181-7">This series builds on lessons learned over the three-year CRIS initiative and offers guidance to schools and districts that aim to develop and enact effective college readiness indicator systems. <span id="u1181-5"></p>
+      <p class="Publications-Subhead-Link" id="u1181-3"><a class="nonblock" href="http://www.whatcountsforamerica.org/book/what-counts/">What Counts: Harnessing Data for America's Communities</a></p>
+      <p id="u1181-7">A new book from the Federal Reserve Bank of San Francisco and the Urban Institute includes a chapter on the Youth Sector b the Gardner Center's Milbrey McLaughlinand UCSC's Rebecca London. <span id="u1181-5"></p>
      </div>
      <div class="shadow clearfix grpelem" id="u1046"><!-- column -->
       <div class="Events-Headline-Link clearfix colelem" id="u1047-5"><!-- content -->
