--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
       <p>The John W. Gardner Center partners with communities to develop leadership, conduct research, and effect change to improve the lives of youth.</p>
      </div>
      <div class="Publications-Headline-Link clearfix grpelem" id="u1037-5"><!-- content -->
-      <p><a class="nonblock" href="http://www.whatcountsforamerica.org/book/what-counts/"><span id="u1037">Publications</span></a></p>
+      <p><a class="nonblock" href="http://www.whatcountsforamerica.org/"><span id="u1037">Publications</span></a></p>
      </div>
      <div class="clearfix grpelem" id="u1181-9"><!-- content -->
-      <p class="Publications-Subhead-Link" id="u1181-3"><a class="nonblock" href="http://www.whatcountsforamerica.org/book/what-counts/">What Counts: Harnessing Data for America's Communities</a></p>
-      <p id="u1181-7">A new book from the Federal Reserve Bank of San Francisco and the Urban Institute includes a chapter on the Youth Sector b the Gardner Center's Milbrey McLaughlinand UCSC's Rebecca London. <span id="u1181-5"></p>
+      <p class="Publications-Subhead-Link" id="u1181-3"><a class="nonblock" href="http://www.whatcountsforamerica.org/">Harnessing Data for America's Communities</a></p>
+      <p id="u1181-7">A new book from the Federal Reserve Bank of San Francisco and the Urban Institute includes a chapter on the Youth Sector by the Gardner Center's Milbrey McLaughlin and UCSC's Rebecca London. <span id="u1181-5"></p>
      </div>
      <div class="shadow clearfix grpelem" id="u1046"><!-- column -->
       <div class="Events-Headline-Link clearfix colelem" id="u1047-5"><!-- content -->
