--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -9,10 +9,10 @@
 We are currently accepting applications for the following positions:
 <br>
 <br>
-<a href="https://stanford.taleo.net/careersection/jobdetail.ftl?job=65948&lang=en">Policy Analyst: Mixed Methods</a>
+<a href="https://stanfordcareers.stanford.edu/job-search?jobId=65948">Policy Analyst: Mixed Methods</a>
 <br>
 <br>
-<a href="https://stanford.taleo.net/careersection/jobdetail.ftl?job=65949&lang=en">Policy Analyst: Quantitative </a>
+<a href="https://stanfordcareers.stanford.edu/job-search?jobId=65949">Policy Analyst: Quantitative </a>
 
 
          </div>
