--- a/about_jgc/team_bios/content-mary.html
+++ b/about_jgc/team_bios/content-mary.html
@@ -8,16 +8,7 @@
 <br>
 <p>
 <img class="bio-std" src="/images/team/Mary.jpg">
-Mary Hofstedt is a Senior Community Engagement Associate at the Gardner Center. Mary directed the Youth Engaged in Leadership and Learning (YELL) program in Redwood City
-from 2003 to 2006, and has trained program staff,
-mentors, and Stanford undergraduate and graduate
-students in Youth Development theory and practice. She also provides facilitation
-and youth development consultation for Bay Area organizations. Mary holds a
-masters degree from the Stanford University School of Education, and has a
-background in education ranging from non-profit management and fund raising
-to teaching and curriculum design. Prior to her work with the Gardner Center, Mary spent six
-years as the Education and Development Director of The Earth’s Birthday Project,
-an environmental education not for profit in Santa Fe, New Mexico.
+Mary Hofstedt is a Senior Community Engagement Associate at the Gardner Center. Mary has worked with the Gardner Center for more than a decade, developing youth leadership initiatives, serving as an advisor in youth development research and practice, and directing cross-sector projects to improve outcomes for youth and communities.  From 2003 to 2006, Mary directed the Youth Engaged in Leadership and Learning (YELL) program in Redwood City, and provided training in youth leadership development to regional and national practitioners as well as to Stanford students. Today, Mary provides cross-sector facilitation and youth development research and practice consultation for Bay Area organizations and collaboratives, with a specific focus in San Mateo County communities. Mary holds a masters degree from the Stanford University School of Education, and has a background in education and community development that includes nonprofit management, strategic planning, organizational development, fundraising, curriculum development and program design. Prior to her work with the Gardner Center, Mary spent six years as the Education and Development Director of The Earth’s Birthday Project, an environmental education not for profit in Santa Fe, New Mexico. 
  </p>
          </div>
 
