--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -13,7 +13,9 @@ We are currently accepting applications for the following positions:
 <br>
 <br>
 <a href="https://stanfordcareers.stanford.edu/job-search?jobId=65949">Policy Analyst: Quantitative </a>
-
+<br>
+<br>
+<a href="https://stanfordcareers.stanford.edu/job-search?jobId=66816">Social Science Research Assistant</a>
 
          </div>
 
