--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@
      </div>
      <div class="shadow clearfix grpelem" id="u1046"><!-- column -->
       <div class="Events-Headline-Link clearfix colelem" id="u1047-5"><!-- content -->
-       <p id="u1047-3"><a class="nonblock" href="https://ed.stanford.edu/events/scope-brown-bag-strategies-building-resilience-and-promoting-adolescent-mental-health-lessons" target="_blank"><span id="u1047">EVENTS</span></a></p>
+       <p id="u1047-3"><a class="nonblock" href="https://ed.stanford.edu/events/scope-brown-bag-science-learning-big-data-technology-and-increasing-quality-and-equity-higher" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="https://ed.stanford.edu/events/scope-brown-bag-strategies-building-resilience-and-promoting-adolescent-mental-health-lessons" target="_blank">Shashank Joshi: Strategies for Building Resiliance & Promoting<br>Adolescent Mental Health Lessons<br> </a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="https://ed.stanford.edu/events/scope-brown-bag-science-learning-big-data-technology-and-increasing-quality-and-equity-higher" target="_blank">SCOPE Brown Bag Seminar:<br>Candace Thille: The Science of Learning<br> </a></p>
        <p>&nbsp;</p>
-       <p>DATE: Monday, May 4, 2015&nbsp;</p>
+       <p>DATE: Monday, May 18, 2015&nbsp;</p>
        <p>LOCATION: Stanford</p>
 	
        <p id="u1182-9">&nbsp;</p>
