--- a/content-donate.html
+++ b/content-donate.html
@@ -4,7 +4,7 @@
 
         <div class="jgc-content-feature-item-left">
 
-          <h1>Support JGC</h1>
+          <h1>Support the Gardner Center</h1>
           <br>
           <p>The Gardner Center's projects and initiatives are mainly supported  by grants and gifts, and we are grateful for the support of our  generous funders. However, in order to achieve our mission of  furthering the field of community youth development, we also need your  support.</p>
 			<p>You can donate to the Gardner Center in one of the following ways: </p><br>
@@ -20,7 +20,7 @@
 	    On the &quot;Direct Your Gift&quot; page, select &quot;School of Education&quot; from top  pull-down menu, then select the appropriate type of gift and payment  method for the other pull-down menus, then click &quot;continue;&quot;<br />
 
             <br />
-            On the next page, enter the donation amount, and <u>be sure to indicate in  the &quot;Special Instructions/Other Designation&quot; area that the donation is  for JGC</u>, then click &quot;continue;&quot;<br />
+            On the next page, enter the donation amount, and <u>be sure to indicate in  the &quot;Special Instructions/Other Designation&quot; area that the donation is  for the Gardner Center</u>, then click &quot;continue;&quot;<br />
             <br />
             Complete the personal information and payment method forms to donate with your credit card.
             </li>
@@ -29,14 +29,14 @@
             <li>Send a check written out to &quot;Stanford University&quot; and send it directly to<br />
 	    <br />
 	    John W. Gardner Center for Youth and Their Communities<br />
-            505 Lasuen Mall <br />
-	    Stanford, CA 94305-3083<br />
+            365 Lasuen Street, Third Floor <br />
+	    Stanford, CA 94305<br />
 	    <br />
 	    Please indicate &quot;John W. Gardner Center&quot; on memo line on check.</li>
   	    <br />
 			
             <li>You can also donate to the Gardner Center through securities transfer by visiting the <strong><a href="https://pgnet22.stanford.edu/give/home?pgnTPC=75&amp;olc=06416&amp;stp=1&amp;cturl=close&amp;gdso=4&amp;pgOrg=ung" target="_blank">Giving at Stanford</a></strong> website and choose securities transfer as method of payment. </li><br>
-            <li>You may also contact Caroline Girgis (tel: 650-725-2611 or email: <a href="mailto:cgirgis@stanford.edu">cgirgis@stanford.edu</a>) for details on how to donate via securities transfer.
+            <li>Please contact Nancy Mancini at 650.724.0713 or at <a href="mailto:nmancini@stanford.edu">nmancini@stanford.edu</a>) with any additional questions.
             </li>
  	  </ul>
           <br>
