--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
       <div id="u1023"><!-- simple frame --></div>
       <div class="clearfix" id="pu1039-5"><!-- column -->
        <div class="Perspectives-Headline-Link clearfix colelem" id="u1039-5"><!-- content -->
-        <p id="u1039-3"><a class="nonblock" href="/resources/publications/GardnerPerspectiveMarch2015.pdf" target="_blank"><span id="u1039">Gardner Perspectives</span></a></p>
+        <p id="u1039-3"><a class="nonblock" href="/resources/publications/GardnerPerspectiveMay2015.pdf" target="_blank"><span id="u1039">Gardner Perspectives</span></a></p>
        </div>
        <div class="clearfix colelem" id="u1040-16"><!-- content -->
-        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="/resources/publications/GardnerPerspectiveMarch2015.pdf" target="_blank">BUILDING DATA ATTITUDE <br>AND DATA CAPACITY</a></p>
+        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="/resources/publications/GardnerPerspectiveMay2015.pdf" target="_blank">THE ECOLOGY OF <br>COMMUNITY HEALTH</a></p>
         <p id="u1040-7">&nbsp;</p>
-        <p id="u1040-9">Hadar Baharav</p>
+        <p id="u1040-9">Sophia Colombari Figueroa</p>
         <p id="u1040-11"></p>
-        <p><br/>Today more than ever, funders and stakeholders expect community-based organizations to collect and analyze data to report on their outcomes.  The “outcome investing approach” and “outcomes-based approach” set forth by the Gates Foundation and the Lumina Foundation are just two expressions of such expectation.  A project I am currently working on has given my colleagues and me the opportunity to observe and think deeply about how community organizations use data.  </p>
+        <p><br/>A holistic approach is essential to leveraging the playing field and advancing equity. If we ignore context, we miss important parts of the puzzle. Learning about the Gardner Center's tri-level youth development framework and gaining first-hand experience in applying this ecological lens to my work as a SPIN Shinnyo Fellow prepares me well as I work to improve health and health care of underserved communities.</p>
        </div>
       </div>
      </div>
@@ -208,9 +208,9 @@
        <p id="u1047-3"><a class="nonblock" href="https://ed.stanford.edu/events/scope-brown-bag-science-learning-big-data-technology-and-increasing-quality-and-equity-higher" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="https://ed.stanford.edu/events/scope-brown-bag-science-learning-big-data-technology-and-increasing-quality-and-equity-higher" target="_blank">SCOPE Brown Bag Seminar:<br>Candace Thille: The Science of Learning<br> </a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="https://events.stanford.edu/events/513/51301/" target="_blank">Health Services in Schools<br>From Cost-Effectiveness Studies to Distrutional Justice<br> </a></p>
        <p>&nbsp;</p>
-       <p>DATE: Monday, May 18, 2015&nbsp;</p>
+       <p>DATE: Friday, May 29, 2015&nbsp;</p>
        <p>LOCATION: Stanford</p>
 	
        <p id="u1182-9">&nbsp;</p>
@@ -247,10 +247,10 @@ The American Academy of Arts and Sciences has tapped the Gardner Center’s foun
       <p><a class="nonblock" href="/resources/publications/brochure-12-13-12.pdf"  target="_blank">Click here for PDF version</a></p>
      </div>
      <div class="grpelem" id="u1043"><!-- custom html -->
-      <iframe width="328" height="210" src="//www.youtube.com/embed/6SFup6WHM6o?list=UUYtp74jGqSdHJdIh9v61MNQ" frameborder="0" allowfullscreen></iframe>></iframe>
+      <iframe width="328" height="210" src="https://www.youtube.com/embed/0QakBLcldTQ?list=PLsRNoUx8w3rPvhx_lImJfT7aiQ5tEbxoj" frameborder="0" allowfullscreen></iframe>></iframe>
 </div>
      <div class="clearfix grpelem" id="u1041-5"><!-- content -->
-      <p><span id="u1041"> Researchers Monika Sanchez & Laurel Sipes</span>&nbsp;on our collaboration with the Mission Promise Neighborhood Initiative.</p>
+      <p><span id="u1041"> Faculty Director Prudence Carter</span>&nbsp;gives a talk about empathy and equity at TEDxStanford 2014.</p>
      </div>
     </div>
     <div class="clearfix colelem" id="pu7265-4"><!-- group -->
