fixed typo on home page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <p id="u1040-7">&nbsp;</p>
         <p id="u1040-9">Sophia Colombari Figueroa</p>
         <p id="u1040-11"></p>
-        <p><br/>A holistic approach is essential to leveraging the playing field and advancing equity. If we ignore context, we miss important parts of the puzzle. Learning about the Gardner Center's tri-level youth development framework and gaining first-hand experience in applying this ecological lens to my work as a SPIN Shinnyo Fellow prepares me well as I work to improve health and health care of underserved communities.</p>
+        <p><br/>A holistic approach is essential to leveling the playing field and advancing equity. If we ignore context, we miss important parts of the puzzle. Learning about the Gardner Center's tri-level youth development framework and gaining first-hand experience in applying this ecological lens to my work as a SPIN Shinnyo Fellow prepares me well as I work to improve health and health care of underserved communities.</p>
        </div>
       </div>
      </div>
