--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
        <p id="u1047-3"><a class="nonblock" href="https://ed.stanford.edu/events/scope-brown-bag-science-learning-big-data-technology-and-increasing-quality-and-equity-higher" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="https://events.stanford.edu/events/513/51301/" target="_blank">Health Services in Schools<br>From Cost-Effectiveness Studies to Distributional Justice<br> </a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="https://commencement.stanford.edu/events/commencement" target="_blank">124th Commencement Ceremony 2015<br> </a></p>
        <p>&nbsp;</p>
-       <p>DATE: Friday, May 29, 2015&nbsp;</p>
+       <p>DATE: Sunday, June 14, 2015&nbsp;</p>
        <p>LOCATION: Stanford</p>
 	
        <p id="u1182-9">&nbsp;</p>
