changes for week

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -47,7 +47,7 @@
  <p><a href="mailto:hadarb@stanford.edu">hadarb@stanford.edu</a></p>
 <br>
 	  <a class="header-link" href="/about_jgc/team_bios/manuelito.html">Manuelito Biag</a>
-	  <p>Social Science Research Associate</p>
+	  <p>Senior Research Associate</p>
 (650) 724-2810<br>	  
 <p><a href="mailto:mdbiag@stanford.edu">mdbiag@stanford.edu</a></p>
           <br>
