--- a/about_jgc/team_bios/content-manuelito.html
+++ b/about_jgc/team_bios/content-manuelito.html
@@ -4,11 +4,11 @@
 
         <div class="jgc-content-feature-item-left">
       <h1 class="content-text-header">  Manuelito Biag</h1>
-<span class="content-bold">Social Science Research Associate </span><br>
+<span class="content-bold">Senior Research Associate </span><br>
 <br>
 <p>
 <img class="bio-std" src="/images/team/Manuelito.jpg">
-Manuelito Biag received his Ph.D. in Education Policy from the University of California, Davis. His research interests include school-based integrated services, youth development, and the connections between children's and adolescents' health, psychosocial development, and educational trajectories. Manuelito has many years of experience working with young people in different settings including group homes, public schools, and day treatment programs. He joined the Gardner Center as a Research Associate in 2012.
+Manuelito Biag received his Ph.D. in Education Policy from the University of California, Davis. His research interests include urban school reform, youth development, and the connections between young people’s health and educational trajectories. Manuelito has years of experience working with youth in a variety of settings including group homes, public schools, and day treatment programs. He joined the Gardner Center as a Research Associate in 2012
 </p>
          </div>
 
