--- a/about_jgc/team_bios/content-manuelito.html
+++ b/about_jgc/team_bios/content-manuelito.html
@@ -8,7 +8,7 @@
 <br>
 <p>
 <img class="bio-std" src="/images/team/Manuelito.jpg">
-Manuelito Biag received his Ph.D. in Education Policy from the University of California, Davis. His research interests include urban school reform, youth development, and the connections between young people’s health and educational trajectories. Manuelito has years of experience working with youth in a variety of settings including group homes, public schools, and day treatment programs. He joined the Gardner Center as a Research Associate in 2012
+Manuelito Biag received his Ph.D. in Education Policy from the University of California, Davis. His research interests include urban school reform, youth development, and the connections between young people’s health and educational trajectories. Manuelito has years of experience working with youth in a variety of settings including group homes, public schools, and day treatment programs. He joined the Gardner Center as a Research Associate in 2012.
 </p>
          </div>
 
