--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
        <p id="u1047-3"><a class="nonblock" href="https://ed.stanford.edu/events/scope-brown-bag-science-learning-big-data-technology-and-increasing-quality-and-equity-higher" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="http://events.stanford.edu/events/527/52743/" target="_blank">Film Screening: Kurmanjan Datka (Queen of the Mountains)<br> </a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="http://www.paloaltoonline.com/calendar/event/art-in-action-student-work-exhibit" target="_blank">Art in Action<br>Student Work Exhibit </a></p>
        <p>&nbsp;</p>
-       <p>DATE: Wednesday, June 24, 2015&nbsp;</p>
-       <p>LOCATION: Stanford</p>
+       <p>DATE: June 2 through August 28&nbsp;</p>
+       <p>LOCATION: East Palo Alto Library</p>
 	
        <p id="u1182-9">&nbsp;</p>
       </div>
