--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -6,13 +6,10 @@
         <h1 class="title-page-header-big">Jobs, Internships, and Volunteer Opportunities</h1>
 
 <br>
-We are currently accepting applications for the following positions:
+There are no open positions at this time. Please check back at a later date.
 <br>
 <br>
-<a href="https://stanfordcareers.stanford.edu/job-search?jobId=65949">Policy Analyst: Quantitative </a>
-<br>
-<br>
-<a href="https://stanfordcareers.stanford.edu/job-search?jobId=66816">Social Science Research Assistant</a>
+
 
          </div>
 
