content and Erica updates

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -71,11 +71,6 @@
 (650) 723-3099<br>	  
 <p><a href="mailto:larissa.collins@stanford.edu">larissa.collins@stanford.edu</a></p>
           <br>
-  	  <a class="header-link" href="/about_jgc/team_bios/abby.html">Abby Do</a>
-	  <p>Research Assistant</p>
-(650) 721-2971<br>	  
-<p><a href="mailto:abbydo@stanford.edu">abbydo@stanford.edu</a></p>
-          <br>
  <a class="header-link" href="/about_jgc/team_bios/kendra.html">Kendra Fehrer</a>
 	  <p>Research Associate</p>
 (650) 724-8462<br>	 
@@ -101,17 +96,19 @@
 <a class="header-link" href="/about_jgc/team_bios/judy.html">Judy Liang</a>
 	  <p>Policy Analyst</p>
 (650) 725-9853<br>	  
-<p><a href="mailto:rlondon@stanford.edu">jcliang@stanford.edu</a></p>
+<p><a href="mailto:jcliang@stanford.edu">jcliang@stanford.edu</a></p>
           <br>
- 	  
-
-
+ 
  		<a class="header-link" href="/about_jgc/team_bios/nancy.html">Nancy Mancini</a>
 	  <p>Associate Director</p>
 (650) 724-0713<br>
 	  <p><a href="mailto:nmancini@stanford.edu">nmancini@stanford.edu</a></p>
           <br>
-
+  	  <a class="header-link" href="/about_jgc/team_bios/abby.html">Erica Messner</a>
+	  <p>Policy Analyst</p>
+(650) 721-5949<br>	  
+<p><a href="mailto:emess@stanford.edu">emess@stanford.edu</a></p>
+<br>
  		<a class="header-link" href="/about_jgc/team_bios/frances.html">Frances Miller</a>
 	  <p>Policy Analyst</p>
 (650) 736-6076<br>
@@ -154,8 +151,8 @@
 	  <br>
 
 	   <a class="header-link" href="/about_jgc/team_bios/laurel.html">Laurel Sipes</a>
-	  <p>Policy Analyst</p>
-(650) 726-1529<br>	  
+	  <p>Senior Policy Analyst</p>
+(650) 736-1529<br>	  
 <p><a href="mailto:mdbiag@stanford.edu">lsipes@stanford.edu</a></p>
 <br> 
 	
