--- a/about_jgc/team_bios/content-laurel.html
+++ b/about_jgc/team_bios/content-laurel.html
@@ -4,7 +4,7 @@
 
         <div class="jgc-content-feature-item-left">
       <h1 class="content-text-header">  Laurel Sipes </h1>
-<span class="content-bold">Policy Analyst</span><br>
+<span class="content-bold">Senior Policy Analyst</span><br>
 <br>
 <p>
 <img class="bio-std" src="/images/team/Laurel.jpg">
