--- a/resources/content-reports.html
+++ b/resources/content-reports.html
@@ -6,7 +6,7 @@
       
 
 <h1 class="title-page-header-big">Reports</h1><br>
-<a href="/resources/reports/ECE_Linkages_TOCReport_2013.pdf">Early Childhood Community School Linkages: Advancing a Theory of Change, September 2013</a>
+<a href="/resources/reports/PlayworksReportMay2015.pdf">The Relationship between Playworks Participation and Student Attendance in Two School Districts</a>
 <br>
 <br>
 <a href="/resources/reports/OKF_Report_12.12.pdf">Oakland Kids First: Peers Advising Students to Succeed, December 2012</a><br>
