--- a/about_jgc/team_bios/content-erica.html
+++ b/about_jgc/team_bios/content-erica.html
@@ -7,8 +7,9 @@
            <span class="content-bold">Policy Analyst</span><br>
 	   <br>
 	  <p>
-<img class="bio-std" src="/images/team/erica.jpg">
+<img class="bio-std" src="/images/team/erica.JPG">
 <p>Erica Messner joined the Gardner Center as a Policy Analyst in June 2015. Prior to joining the team, she worked with youth-serving community organizations and school districts in New York and California. As a Rochester Youth Year AmeriCorps VISTA, she helped guide collaboration between Rochester City School District leaders and community organizations engaged as Expanded Learning partners. She has experience using qualitative and quantitative data to support continuous improvement in community initiatives and decision-making. She is passionate about advancing democratic processes, educational equity, collaborative research, and positive community development. 
+<br>
 <br>
 Erica earned her MA in Policy and Organizations Research at the Graduate School of Education at the University of California, Berkeley. For her graduate thesis, she conducted a qualitative analysis of organizational and institutional processes affecting the construction of LCAP stakeholder engagement in one California district. She has a BA in Music and Political Science from the University of Rochester.</p>
           </p>
