--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
        <div class="clearfix colelem" id="u1040-16"><!-- content -->
         <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="/resources/publications/GardnerPerspectiveAugust2015.pdf" target="_blank">PUTTING EARLY MATH TEACHER PROFESSIONAL DEVELOPMENT<br>INTO THE EQUATION</a></p>
         <p id="u1040-7">&nbsp;</p>
-        <p id="u1040-9">Graciela Borsato & Monika Sanchez</p>
+        <p id="u1040-9">Monika Sanchez & Graciela Borsato</p>
         <p id="u1040-11"></p>
         <p><br/>Along with the push to expand access to high-quality preschool, there is a growing national trend promoting alignment across the preschool and early elementary grades to ensure a continuous and coherent set of learning experiences. In our work at the Gardner Center, we have seen efforts first-hand to enhance the quality of education in the early years and support instructional alignment between preschool and elementary school.</p>
        </div>
