--- a/Wallace/Registration/Welcome.html
+++ b/Wallace/Registration/Welcome.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
-<html>
+
+<!--[if lt IE 9]>
+<script type="text/javascript" >
+document.createElement("nav" );
+document.createElement("header" );
+document.createElement("footer" );
+document.createElement("section" );
+document.createElement("aside" );
+document.createElement("article" );
+</script>
+<![endif]-->
+<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
+<!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
+<!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
+<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 
 <head>
+
 <meta charset="utf-8">
+<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame Remove this if you use the .htaccess -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Wallace Convening</title>
 <meta name="description" content="Wallace Convening data to action">
@@ -23,10 +42,72 @@
 
 <link rel="shortcut icon" href="images/gardner.jpeg"/>
 
-<!--[if lt IE 9]>
-      <script src="scripts/html5shiv.js"></script>
-      <script src="scripts/respond.min.js"></script>
-    <![endif]-->
+
+
+<script src="scripts/jquery-1.11.2.min.js"></script> 
+
+<script>
+//$(function () {
+  $("#email").keyup(function(event){
+    if(event.keyCode == 13){
+      $("#emailBtn").click();
+    }
+  });
+//});
+
+function validE(email) {
+  console.log("JBB" + email + "JBB");
+  var regex = /^([a-zA-Z0-9_\.\-\+])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+  return regex.test(email);
+  //var filter = /^([\w-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/;
+  //return filter.test(email);
+}
+
+function signup() {
+  var email = $('#email');
+  var contactName = $('#contact_name');
+  var contactOrg = $('#contact_organ');
+  var contactJob = $('#contact_job');
+  var contactHello = $('#contact_hello');
+  var contactMessage = $('#contact_message');
+  var messageLine = $('#messageLine');
+  if (validE(email.val())) {
+    messageLine.replaceWith('<p>Well done! You are now registered for the convening. Please book your hotel below</p>');
+    $('#error').hide();
+    $('#emailBtn').hide();
+    //send info to server
+    //if ($.browser.msie && window.XDomainRequest) {
+    if (navigator.userAgent.match(/msie/i)) {
+    // Use Microsoft XDR
+      var xdr = new XDomainRequest();
+      xdr.open("get",'http://cs210net.stanford.edu/cgi-bin/jgc-wallace.cgi?email=' + email.val() + '&name=' + contactName.val() + '&org=' + contactOrg.val() + '&title=' + contactJob.val() + '&group=' + contactHello.val() + '&message=' + contactMessage.val());
+      
+      xdr.onload = function() {
+          // XDomainRequest doesn't provide responseXml, so if you need it:
+          var dom = new ActiveXObject("Microsoft.XMLDOM");
+          dom.async = false;
+          dom.loadXML(xdr.responseText);
+      };
+      xdr.send();
+    } else {
+      $.ajax({
+        type: 'POST',
+        url: 'http://cs210net.stanford.edu/cgi-bin/jgc-wallace.cgi',
+        data: { 'email': email.val(), 
+                'name': contactName.val(),
+                'org': contactOrg.val(),
+                'title': contactJob.val(),
+                'group': contactHello.val(),
+                'message': contactMessage.val()
+              }
+      });
+    }          
+  } else {
+    $('#error').show();
+  }
+}
+</script>
+
 
 
 </head>
@@ -127,10 +208,15 @@
 	<!-- CONTACT FULL BLOCK -->
 	<section id="contact-full" class="text-center">
 		<div class="container">
-			<h2 class="title">Registration</h2>
-			<p class="sep-bottom">Please register for the convening and hotel below. Thank you!
 
-</p>
+
+
+
+
+			<h2 class="title">Registration</h2>
+			<p id="messageLine" class="sep-bottom">Please register for the convening and hotel below. Thank you!</p>
+
+
 
 <form action="/cgi-bin/contacts.php" method="POST" role="form"  id="contact_form">
 
@@ -139,7 +225,7 @@
 	</div>
 
 <div class="form-group">
-<input type="text" name="email" class="form-control" id="contact_email" placeholder="Email Address">
+<input type="text" name="email" class="form-control" id="email" placeholder="Email Address">
 	</div>
 
 
@@ -154,8 +240,8 @@
 <div class="form-group">
 
 <select class="form-control id="contact_hello" name="hello">
-                                                <option value="1"selected>Please Select City Team/Group</option>
-                                                <option value="2">Baltimore</option>
+                                                <option value="None Selected"selected>Please Select City Team/Group</option>
+                                                <option value="Baltimore">Baltimore</option>
                                                 <option value="3">Fort Worth</option>
                                                 <option value="4">Philadelphia</option>
                                                 <option>New York</option>
@@ -184,7 +270,10 @@
 	</div>
 
 
-<button type="submit" value="Send" id="contact_submit" data-loading-text="&bull;&bull;&bull;" class="btn btn-lg btn-block btn-primary"><i class="icon icon-note"></i> Reserve</button>
+<input type="button" id="emailBtn" value="Reserve" onclick="signup();" class="btn btn-lg btn-block btn-primary"><br>
+
+<span id="error" style="display: none;">Please enter a valid email.</span> 
+
 
 
 </form>
@@ -305,7 +394,6 @@ Amenities include an American restaurant and a lounge, plus a fitness center, a 
 <!-- MODALS END--> 
 
 <!-- JavaScript --> 
-<script src="scripts/jquery-1.11.2.min.js"></script> 
 <script src="scripts/bootstrap.min.js"></script> 
 <script src="scripts/jquery.validate.min.js"></script> 
 <script src="scripts/smoothscroll.js"></script> 
