new images and copy

--- a/Wallace/Registration/Welcome.html
+++ b/Wallace/Registration/Welcome.html
@@ -149,7 +149,7 @@ function signup() {
 					<div class="slogan">
 						<h1 class="giant-title">6 - 7 OCTOBER<br>
 							<b>From Data to <font color="#8C1515">Action</font></b></h1>
-						<p>The Wallace Foundation is pleased to invite you to a two-day convening of grantees<br> and guests on October 6 and 7, 2015, at Stanford University. Hosted by the John W. Gardner Center<br> for Youth and Their Communities, the convening will focus on the strategic use of data to drive improvement and learning in <br> cross-sector community collaboratives. Key issues to be discussed include data use, <br>quality, governance, sustainability, and communications.</p>
+						<p>The Wallace Foundation is pleased to invite you to a two-day convening of grantees<br> and guests on October 6 and 7, 2015, at Stanford University. Hosted by the John W. Gardner Center<br> for Youth and Their Communities, the convening will focus on the strategic use of data to drive improvement and learning in <br>cross-sector community collaboratives. Key issues to be discussed include strategic data use, <br>communications and partnerships.</p>
 					</div>
 					<a class="btn btn-lg btn-default-white goto" href="#content-half-left"><i class="icon icon-mouse"></i> Learn More</a> </div>
 			</div>
@@ -163,7 +163,7 @@ function signup() {
 				<div class="col-lg-4 col-md-5">
 					<h2>14 Cities</h2>
 					<h4 class="sub-title">ASB I & ABS II</h4>
-					<p>Baltimore, Pennsylvania, Grand Rapids, Denver, Jacksonville, Providence, boston, Washington D.C, Fort Worth, New York, Chicago, St. Paul, Louisville, & Nashville </p>
+                                        <p>Baltimore, Boston, Chicago, Denver, Fort Worth, Grand Rapids, Jacksonville, Louisville, Nashville, New York City, Providence, Philadelphia, St. Paul, & Washington D.C.</p>
 				</div>
 			</div>
 		</div>
@@ -176,9 +176,9 @@ function signup() {
 			<div class="row">
 				<div class="col-lg-4 col-lg-offset-8 col-md-5 col-md-offset-7">
 					<h2>6 TA Providers</h2>
-					<p>Croft & Joftus, Forum Youth Investments, Collaborative Communications Group, National Institute on Out-of-School Time, & Weikart
-
- </p>
+					<p>Collaborative Communications Group, Croft & Joftus, John W. Gardner Center for Youth and Their Communitites, National Institute on Out-of-School Time, National League of Cities.
+ </p><br>
+					<h2>The Wallace<br>Foundation<br><br>Honored Guests</h2>
 				</div>
 			</div>
 		</div>
@@ -192,7 +192,7 @@ function signup() {
 				<div class="col-md-4">
 					<h2 class="title">Will Convene for 2 days at:</h2>	
 					<h3 class="sep-bottom"><i class="icon-pointer"></i> Sheraton Hotel in Palo Alto, CA</h3>				
-					<P>The two-day convening will include presentations and panel discussions with diverse representatives from Bay Area collaboratives who will dive deeply into their specific experiences of using data to inform their work. Participants will have an opportunity to apply creative problem solving to real scenarios their cities face.</P>
+					<P>The two-day convening will include presentations and panel discussions with diverse representatives from California collaboratives who will dive deeply into their specific experiences of using data to inform their work. Participants will have an opportunity to apply creative problem solving to real scenarios.</P>
 				</div>
 				<div class="col-md-6 col-md-offset-2">
 					<div class="embed-responsive embed-responsive-4by3">
@@ -312,7 +312,7 @@ function signup() {
 
         <div class="address">
 
-          <h4>Spend three relaxing days at the Sheraton Hotel in Palo Alto, CA. The area is full of great restaurants, galleries, startups, and of course, Stanford University.</h4>
+          <h4>Please join us at the Sheraton Hotel in Palo Alto, CA. The area is full of great restaurants, galleries, startups, and of course, Stanford University.</h4>
 
           <h5><i class="fa fa-chevron-right"></i> Venue</h5>
 
@@ -323,7 +323,10 @@ function signup() {
 <button type="button" class="btn btn-primary" onclick="window.location.href='https://www.starwoodmeeting.com/StarGroupsWeb/res?id=1506170108&key=2CDFE0BF'"><i class="icon icon-note"></i>Book Now</button>
           </div>
 
-          <h5><i class="fa fa-chevron-right"></i> Nearby Accomodation</h5>
+          <h5><i class="fa fa-chevron-right"></i> Additional details</h5>
+          <p>A 5-minute walk from the Palo Alto Caltrain station, this modern lodging is also 12 minutes' walk from the Stanford Shopping Center. Amenities include an American restuarant and a lounge, plus a fitness center, a heated outdoor pool and a 24/7 business center.</p>
+
+          <h5><i class="fa fa-chevron-right"></i> Nearby Attractions</h5>
 
           <div class="venue">
             <p><span>Stanford University</span></p>
@@ -346,13 +349,7 @@ function signup() {
             <a href="http://www.simon.com/mall/stanford-shopping-center">Visit Webpage</a>
           </div>
 
-          <h5><i class="fa fa-chevron-right"></i> Additional details</h5>
 
-          <p>A 5-minute walk from the Palo Alto Caltrain station, this modern lodging is also 12 minutes' walk from the Stanford Shopping Center. 
-
-<p>Slick rooms come with WiFi (fee), flat-screen TVs and coffeemakers, as well as desks with ergonomic chairs. Individual features depending on the room include free WiFi, kitchenettes and whirlpool tubs, as well as balconies/patios. Suites add separate living areas. Club rooms provide access to a lounge with complimentary continental breakfast, all-day snacks and afternoon appetizers.</p>
-<p>
-Amenities include an American restaurant and a lounge, plus a fitness center, a heated outdoor pool and a 24/7 business center.</p>
 
         </div>
 
