--- a/Wallace/index.html
+++ b/Wallace/index.html
@@ -24,7 +24,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="welcome-message">
-<h3 class="animated fadeInDown">Welcome Wallace Cities and Participants To</h3>
+<h3 class="animated fadeInDown">Welcome Wallace Grantees and Participants To</h3>
           <h1 class="animated zoomIn">NEXT GENERATION AFTER SCHOOL SYSTEM BUILDING INITIATIVE CROSS-SITE CONVENING</h1>
           <h2 class="animated fadeInDown">At Stanford University</h2>
           <div class="button animated zoomIn">
